--- a/homework02/movie.css
+++ b/homework02/movie.css
@@ -31,7 +31,7 @@
 
     .head{
         width: 100%;
-        length: 50px;
+        height: 50px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         font-size: 24pt;
         font-weight: bold;
