--- a/pie/piestyle.css
+++ b/pie/piestyle.css
@@ -1,7 +1,5 @@
 h1 span {
-    
-   
-    
+
     font-weight: bold;
     font-size:  22pt;
     font-size: Lucida, Helvetica, Arial, sans-serif  ;
@@ -12,6 +10,9 @@ h1 span {
     text-align: center;
     
     }
+    body{
+      background-image: url("../images/silverware.jpg");
+    }
 
   
     ol{
@@ -19,7 +20,7 @@ h1 span {
       font-size: 16px;
   }
 
-    img{
+    #image{
         width: 300px;
         height: 300px;
     }
@@ -75,7 +76,12 @@ h1 span {
                
         } 
 
-        #devpic{
-          height:60px;
+  #devpic{
+      height:60px;
                    
       }
+
+    #image1,#image2{
+        width: 20px;
+        height: 20px;
+    }
